2009-12-23  Ian Beckwith  <ianb@erislabs.net>

	* gitaction: .lzma support and better .7z support.
	* lib/mbslen.c: Apply patch from Nelson H. F. Beebe
	  to fix compilation on MirOS. Until this fix makes its
	  way upstream the patch will need reapplying every time
	  './prepare -a' is run.

2009-12-22  Ian Beckwith  <ianb@erislabs.net>

	* Merged 'curses' branch:
	  + gnuit now uses curses for display, and supports displaying
	    wide characters (eg unicode).
	    As a consequence, gnuit now depends on GNU ncurses with wide
 	    character support (ncursesw), or other curses implementations
	    using the same wide-character API (if such things exist).
	  + gitview now supports displaying and seeking to 64-bit
	    offsets. Offsets above 0xFFFFFFFF are displayed split
	    over two lines so the screen still fits in 80 characters.
	  + Single panel mode defaults to enable-all mode (like ls -l).
	    This has been the default in the code for ages, but a bug
	    prevented it from working.
	  + Version bumped to 4.9.6.
	  + Disable ^Z when keyboard locked.
	  + gitaction: quotes args to tr.
	  + import gnulib 563c7796, including more portability modules.
	* Use locale for date formats in panel.
	* gitview: don't special-case non-regular files.

2009-02-26  Ian Beckwith  <ianb@erislabs.net>

	* gnuitrc.common.IN: show video files in grey (bright black)
	  and encrypted files in green.

2009-02-10  Ian Beckwith  <ianb@erislabs.net>

	* Bumped version of Free Documentation License to 1.3 or later,
	  still with no Invariant Sections, no Front-Cover Texts, no
	  Back-Cover Texts.
	* Updated gnulib to commit 69aecd33.
	* prepare: stop importing memmove module: obsolete.
	* Makefile.am: add m4/sockpfaf.m4 to EXTRA_DIST.
	* .gitignore: add lib/fcntl.h and lib/signal.h.
	* Update NEWS.

2009-02-08  Ian Beckwith  <ianb@erislabs.net>

	* Added filetype info for many more file extensions.
	  Thanks to Tudor Hulubei (and Wikipedia).
